# dispatcher-example

./: .gitignore  CMakeLists.txt  README.md
PythonPlugins/: hello.py  wrapper.py
platform/: CMakeLists.txt  result.db
platform/PythonPlugins/: LocationStrategy.py  strategy_finder.py  wrapper.py
platform/cmake/: FindCython.cmake
platform/src/: CMakeLists.txt  main.cpp
platform/src/Api/: CMakeLists.txt  api.cpp  api.h  api_builder.cpp  api_builder.h
platform/src/Common/: thread_utils.h
platform/src/Dispatcher/: CMakeLists.txt  dispatcher.h  dispatcher_builder.cpp  dispatcher_builder.h  lf_queue.h  tasks_queue.h  thread_pool.cpp  thread_pool.h
platform/src/Logging/: CMakeLists.txt  factory.cpp  log_processor.cpp  logging.h  safe_queue.h  stdout_logger.cpp
platform/src/PythonFunctions/: CMakeLists.txt  Playground.pyx
platform/src/Strategies/: python_strategy.cpp  python_strategy.h  strategy.h  strategy_factory.cpp  strategy_factory.h
queryui/backend/: README.md  app.py  database.db  dbinit.py  favorite.py  launch.py  models.py  requirements.txt  strategy.py  web.py
queryui/backend/env/: pyvenv.cfg
queryui/backend/templates/: app.html
queryui/backend/ui/: ChatView.css  ChatView.js  index.css  index.js
queryui/frontend/: .env  README.md  vite.config.ts
queryui/frontend/src/: api.ts  common.ts
queryui/frontend/src/components/: DashboardComp.vue  HomeComp.vue  StartComp.vue
queryui/frontend/src/router/: index.ts
queryui/frontend/src/scss/: colors.scss  tooltip.scss
src/: CMakeLists.txt  config.in  main.cpp
src/Common/: CMakeLists.txt
src/Dispatcher/: CMakeLists.txt  dispatcher.h  dispatcher_builder.cpp  dispatcher_builder.h  lf_queue.h  thread_pool.h  thread_utils.h
src/Logging/: CMakeLists.txt  file_logger.cpp  log_processor.cpp  logging.h  spd_logger.cpp
src/PythonFunctions/: CMakeLists.txt  Playground.pyx
src/Strategies/: CMakeLists.txt  python_strategy.cpp  python_strategy.h  strategy.h  strategy_factory.h
